--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:17
     environment:
       POSTGRES_USER: botdb
-      POSTGRES_PASSWORD: PASSWORD@2024
+      POSTGRES_PASSWORD: PASSWORD
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
